2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (isPointInRect): New utility method,
    * source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
    (drawItem): Modified bounds check for inclusion of chart entity,
    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    (drawSecondaryPass): Modified bounds check for inclusion of chart entity.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
    (getChartRenderingInfo): New method,
    (isDomainZoomable): Likewise,
    (setDomainZoomable): Likewise,
    (isRangeZoomable): Likewise,
    (setRangeZoomable): Likewise.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1977609:
    * source/org/jfree/chart/util/SerialUtilities.java
    (readShape): Handle SEG_CLOSE for GeneralPath,
    * source/org/jfree/chart/util/ShapeUtilities.java
    (equal(GeneralPath, GeneralPath)): Use correct path for comparison,
    * tests/org/jfree/chart/util/junit/SerialUtilities.java: New file,
    * tests/org/jfree/chart/util/junit/ShapeUtilities.java: Likewise,
    * tests/org/jfree/chart/util/junit/UtilPackageTests.java: Include new tests.

2008-05-30  Henry Proudhon  <henry.proudhon@ensmp.fr>

    * source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
    (ChartComposite): removed duplicate code.

2008-05-24  Henry Proudhon  <henry.proudhon@ensmp.fr>

    * source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
    (paintControl): Corrected the axis traces which were inverted,
    (chart): Fixed listener registered twice,
    (dispose): release the buffer image resources.
    * source/swt/org/jfree/experimental/swt/SWTGraphics2D.java
    (setTransform): use resource from pool if possible,
    (getSwtTransformFromPool): New method,
    (disposeResourcePool): dispose transform resources.
