@@ -2,49 +2,51 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
  *
  * --------------------------------------------
  * DynamicDriveToolTipTagFragmentGenerator.java
  * --------------------------------------------
- * (C) Copyright 2003-2007, by Richard Atkinson and Contributors.
+ * (C) Copyright 2003-2008, by Richard Atkinson and Contributors.
  *
  * Original Author:  Richard Atkinson;
+ * Contributors:     David Gilbert (for Object Refinery Limited);
  *
  * Changes
  * -------
  * 12-Aug-2003 : Version 1 (RA);
- * 
+ * 04-Dec-2007 : Escape tool tip text to fix bug 1400917 (DG);
+ *
  */
- 
+
 package org.jfree.chart.imagemap;
 
 /**
- * Generates tooltips using the Dynamic Drive DHTML Tip Message 
+ * Generates tooltips using the Dynamic Drive DHTML Tip Message
  * library (http://www.dynamicdrive.com).
  */
-public class DynamicDriveToolTipTagFragmentGenerator 
-    implements ToolTipTagFragmentGenerator {
+public class DynamicDriveToolTipTagFragmentGenerator
+        implements ToolTipTagFragmentGenerator {
 
     /** The title, empty string not to display */
     protected String title = "";
@@ -62,9 +64,9 @@ public class DynamicDriveToolTipTagFragmentGenerator
     /**
      * Creates a new generator with specific title and style settings.
      *
-     * @param title  title for use in all tooltips, use empty String not to 
+     * @param title  title for use in all tooltips, use empty String not to
      *               display a title.
-     * @param style  style number, see http://www.dynamicdrive.com for more 
+     * @param style  style number, see http://www.dynamicdrive.com for more
      *               information.
      */
     public DynamicDriveToolTipTagFragmentGenerator(String title, int style) {
@@ -76,13 +78,14 @@ public class DynamicDriveToolTipTagFragmentGenerator
      * Generates a tooltip string to go in an HTML image map.
      *
      * @param toolTipText  the tooltip.
-     * 
+     *
      * @return The formatted HTML area tag attribute(s).
      */
     public String generateToolTipFragment(String toolTipText) {
-        return " onMouseOver=\"return stm(['" + this.title + "','" 
-            + toolTipText + "'],Style[" + this.style + "]);\"" 
-            + " onMouseOut=\"return htm();\"";
+        return " onMouseOver=\"return stm(['"
+            + ImageMapUtilities.htmlEscape(this.title) + "','"
+            + ImageMapUtilities.htmlEscape(toolTipText) + "'],Style["
+            + this.style + "]);\"" + " onMouseOut=\"return htm();\"";
     }
 
 }
