@@ -1,3 +1,12 @@
+2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/imagemap/DynamicDriveToolTipTagFragmentGenerator.java
+    (generateToolTipFragment): Escape text,
+    * source/org/jfree/chart/imagemap/OverLIBToolTipTagFragmentGenerator.java
+    (generateToolTipFragment): Likewise,
+    * source/org/jfree/chart/imagemap/StandardToolTipTagFragmentGenerator.java
+    (generateToolTipFragment): Likewise.
+
 2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
